[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://addons/plugin_manager/ui/manager_panel.gd" id="1"]
[ext_resource type="Script" path="res://addons/plugin_manager/plugin_manager.gd" id="2"]

[node name="ManagerPanel" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Managed Addons"

[node name="Spacer" type="Control" parent="VBoxContainer/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusLabel" type="Label" parent="VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "No addons found"

[node name="CheckButton" type="Button" parent="VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Check for Updates"

[node name="UpdateAllButton" type="Button" parent="VBoxContainer/Toolbar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Update All"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddonList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LogLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[node name="PluginManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2")
